--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -128,3 +128,92 @@ Xác định `Ubuntu` thuộc nhánh `Debian-based` nên ta chỉ đọc phần 
   > Kiểm tra bằng lệnh `kathara --version`
   >
   > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/31-15-58-02-Screen%20Shot%202021-08-31%20at%2015.57.56.png">
+
+### Sử dụng Kathara cơ bản
+
+Trước hết bạn phải đảm bảm mình đã cài `python`, `docker`, `xterm`, `gcc`
+
+::: tip 💡 MẸO 
+
+Sử dụng lệnh `<package> --version` hoặc `<package> -v` để kiểm tra, nếu không tìm thấy hãy gõ : 
+
+```sh
+sudo apt-get install <package>
+```
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-21-36-Screen%20Shot%202021-09-02%20at%2021.21.28.png">
+:::
+
+Sau đó, bạn hãy thực hiện các bước sau : 
+
+- **Bước 1:** Cài đặc **image** của `Kathara` trên `Docker`
+
+  ```sh
+  # tìm kiếm image kathara trên docker
+  $ sudo docker search kathara
+  ```
+
+  > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-24-10-Screen%20Shot%202021-09-02%20at%2021.24.05.png" width="550">
+
+
+  ```sh
+  # pull image kathara về docker
+  $ sudo docker pull kathara/base
+  ```
+
+- **Bước 2:** Kiểm tra môi trường hệ thống `Kathara`
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-27-29-Screen%20Shot%202021-09-02%20at%2021.27.22.png" width="550">
+
+- **Bước 3:** Tạo thiết bị Kathara đầu tiên
+
+  ```sh
+  kathara vstart -n <name>
+  ```
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-29-48-Screen%20Shot%202021-09-02%20at%2021.29.43.png" width="550">
+
+### Guide Kathara
+
+Được lấy từ nguồn chính thức của [Guide Kathara](https://www.kathara.org/man-pages/kathara.1.html)
+
+`Kathara` là công cụ mô phỏng mạng
+
+Nó triển khai từ dự án [Netkit](https://github.com/maxonthegit/netkit-core) sử dụng `Python` nhưng nhanh hơn gấp `10` lần và nhẹ hơn `100` lần
+
+Trong môi trường `Kathara`, mỗi thiết bị mạng được thực hiện bởi một `container` và mỗi liên kết được mô phỏng bằng cách sử dụng mạng ảo
+
+Mỗi thiết bị đều có thể cấu hình tuỳ ý
+
+::: tip 💡 FACT
+
+`Kathara` cung cấp 2 giao diện để khởi chạy và cấu hình thiết bị.
+
+- Tập lệnh có tiền tố `v` ( `vstart`, `vclean`, `vconfig` ) : cho phép khởi động và quản lí các thiết bị **đơn lẻ** và kiểm soát chúng
+  
+- Tập lệnh có tiền tố `l` (`lstart`, `lclean`, `linfo`,`lrestart`, `ltest`) : thiết lập một phòng **lab** được cấu hình một số thiết bị
+:::
+
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-47-53-KatharaFramework.png" width="30">Lệnh : kathara.. | ![icons8-handle_with_care.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/30-12-30-07-icons8-handle_with_care.png)Mô tả |
+| ------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- |
+| vstart                                                                                                                                      | Tạo một thiết bị `Kathara` mới                                                                                                                 |
+| vclean                                                                                                                                      | Dừng thiết bị đơn `Kathara`                                                                                                                    |
+| vconfig                                                                                                                                     | Gắn giao diện mạng vào thiết bị `Kathara` đang chạy                                                                                            |
+| lstart                                                                                                                                      | Khởi động `Kathara Lab`                                                                                                                        |
+| lclean                                                                                                                                      | Dừng `Kathara Lab`                                                                                                                             |
+| lrestart                                                                                                                                    | Khởi động lại `Kathara Lab`                                                                                                                    |
+| ltest                                                                                                                                       | Kiểm thử `Kathara Lab`                                                                                                                         |
+| lconfig                                                                                                                                     | Gắn giao diện mạng vào thiết bị `Kathara` đang chạy trong `Kathara Lab`                                                                        |
+| connect                                                                                                                                     | Kết nối thiết bị `Kathara`                                                                                                                     |
+| exec                                                                                                                                        | Thực thi lệnh trên thiết bị `Kathara`                                                                                                          |
+| wipe                                                                                                                                        | Xoá tất cả thiết bị `Kathara` và tên miền xung đột, xoá luôn thiết lập                                                                         |
+| list                                                                                                                                        | Hiển thị tất cả thiết bị `Kathara` đang chạy                                                                                                   |
+| setting                                                                                                                                     | Hiển thị và chỉnh sửa thiết lập                                                                                                                |
+| check                                                                                                                                       | Kiểm tra môi trường hệ thống                                                                                                                   |
+
+::: tip 💡 MẸO
+
+Khi thực hiện lệnh gì gõ thêm hậu tố `--help` *hoặc* `-h` để đọc cách dùng của nó
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/02-21-51-45-Screen%20Shot%202021-09-02%20at%2021.51.39.png">
+:::
