--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
@@ -1,1 +1,205 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-31-icons8-list.png" width="40"> Danh sách đặc (`ArrayList`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-31-icons8-list.png" width="40"> Bài 1. Danh sách đặc (`ArrayList`)
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình 
+
+<div class="videoZen">
+  <iframe width="704" height="396" src="https://www.youtube.com/embed/tuujlJ19IK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-30-52-icons8_concept_30px.png">[Lý thuyết](https://nguyenvanhieu.vn/mang-1-chieu-trong-c/)
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
+
+Download nguồn [tại đây]()
+
+### Cấu trúc
+
+```c
+#define Max_length 50
+typedef struct{
+    int Data[Max_length];
+    int Size;
+}List;
+```
+
+### Khởi tạo rỗng 
+
+```c
+void makeNullList(List *L){
+    L->Size = 0;
+}
+```
+
+### Hiển thị danh sách
+
+```c
+void displayList(List L){
+    for (int i = 0; i < L.Size; i++){
+        printf("%d ",L.Data[i]);
+    }
+}
+```
+
+### Thêm n phần tử vào danh sách
+
+```c
+void InputList(int n,List *L){
+    makeNullList(L);
+    for(int i = 0; i < n ; i++){
+        scanf("%d",&L->Data[i]);
+        L->Size++;
+    }
+}
+```
+
+### Xoá phần tử vị trí p trong danh sách
+
+```c
+void deleteListbyPos(int p,List *L){
+    for(int i = p; i < L->Size - 1; i++){
+        L->Data[i] = L->Data[i+1];
+    }
+    L->Size--;
+}
+```
+
+
+### Xoá phần tử x trong danh sách
+
+```c
+void deleteListbyID(int x, List *L){
+    for(int i = 0; i < L->Size; i++){
+        if(L->Data[i] == x){
+            deleteListbyPos(i,L);
+        }
+    }
+}
+```
+
+### Trả về vị trí đầu tiên của x trong danh sách
+
+```c
+int locateList(int x,List L){
+    for(int i = 0 ; i < L.Size ; i++){
+        if(L.Data[i] == x){
+            return i;
+        }
+    }
+    return -1;
+}
+```
+
+### Kiểm tra x có trong danh sách
+
+```c
+int memberList(int x,List L){
+    if(locateList(x,L) != 1){
+        return 1;
+    }
+    return 0;
+}
+```
+
+### Tối ưu danh sách (`1 2 3` -> `1 2`)
+
+```c
+void optimizeList(List *L){
+    int  i = 0;
+    int j;
+    while (i != L->Size){
+        j = i + 1;
+        while (j != L->Size){
+            if(L->Data[i] == L->Data[j]){
+                deleteListbyPos(j,L);
+            }
+            else{
+                j++;
+            }
+        }
+        i++;
+    }  
+}
+```
+
+### Thêm x tại vị trí p trong danh sách
+
+```c
+void insertList(int x,int p,List *L){
+    if(L->Size == Max_length){
+        printf("Full List!!!");
+    }
+    else if(p < 0 || p > L->Size){
+        printf("Position Invalid!!!");
+    }
+    else{
+        for(int i = L->Size; i >= p ; i--){
+            L->Data[i]=L->Data[i-1];
+        }
+        L->Size++;
+        L->Data[p] = x;
+    }
+}
+```
+
+### chuyển danh sách qua danh sách mới
+
+```c
+void changeList(List L1,List *L){
+    for(int i = 0 ; i < L1.Size ; i++){
+        insertList(L1.Data[i],L->Size,L);
+    }
+}
+```
+
+### Gộp 2 danh sách vào 1 danh sách
+
+```c
+void mergeList(List L1,List L2,List *L){
+    changeList(L1,L);
+    changeList(L2,L);
+}
+```
+
+### Lọc phần tử chẳn qua 1 danh sách
+
+```c
+void filter_evenNumber(List L1,List *L){
+    int k = 0;
+    for(int i = 0 ; i < L1.Size; i++){
+        if(L1.Data[i] % 2 == 0){
+            insertList(L1.Data[i],k,L);
+            k++;
+        }
+    }
+}
+```
+
+### Lọc phần tử lẻ qua 1 danh sách
+
+```c
+void filter_oddNumber(List L1,List *L){
+    int k = 0;
+    for (int i = 0; i < L1.Size; i++){
+        if(L1.Data[i] % 2 != 0){
+            insertList(L1.Data[i],k,L);
+            k++;
+        }
+    }
+}
+```
+
+### Tính trung bình các phần tử trong danh sách
+
+```c
+double averageList(List L){
+    double result = 0;
+    for (int i = 0; i < L.Size; i++){
+        result += L.Data[i];
+    }
+    return result/L.Size;
+}
+```
+
+
+
+
