--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-51-icons8-link.png" width="40"> Danh sách liên kết (`Linked List`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-51-icons8-link.png" width="40"> Bài 2. Danh sách liên kết (`Linked List`)
+
+## Mô hình 
+
+<div class="videoZen">
+
+</div>
