--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/4.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/4.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-32-icons8-joining_queue.png" width="40"> Hàng đợi (`Queue`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-32-icons8-joining_queue.png" width="40"> Bài 4. Hàng đợi (`Queue`)
+
+## Mô hình 
+
+<div class="videoZen">
+
+</div>
