--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/5.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/5.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-59-icons8-folder_tree.png" width="40"> Cây nhị phân (`Tree BST`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-59-icons8-folder_tree.png" width="40"> Bài 5. Cây nhị phân (`Tree BST`)
+
+## Mô hình 
+
+<div class="videoZen">
+
+</div>
