--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/6.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/6.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-18-13-icons8-tree_structure.png" width="40"> Cây nhị phân AVL (`Tree AVL`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-18-13-icons8-tree_structure.png" width="40"> Bài 6. Cây nhị phân AVL (`Tree AVL`)
+
+## Mô hình 
+
+<div class="videoZen">
+
+</div>
