--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/3.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/3.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-18-icons8-pancake.png" width="40"> Ngăn xếp (`Stack`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-18-icons8-pancake.png" width="40"> Bài 3. Ngăn xếp (`Stack`)
+
+## Mô hình 
+
+<div class="videoZen">
+
+</div>
