--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/7.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/7.md
@@ -1,1 +1,7 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-19-57-icons8-insert_table.png" width="40"> Bảng băm (`HashTable`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-19-57-icons8-insert_table.png" width="40"> Bài 7. Bảng băm (`HashTable`)
+
+## Mô hình 
+
+<div class="videoZen">
+  
+</div>
