--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-31-icons8-list.png" width="40"> Bài 1. Danh sách đặc (`ArrayList`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-31-icons8-list.png" width="40"> Bài 1. Danh sách đặc
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình 
 
@@ -10,9 +10,9 @@
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
 
-Download nguồn [tại đây]()
+### [arrayList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/arrayList.h)
 
-### Cấu trúc
+::: tip KHỞI TẠO
 
 ```c
 #define Max_length 50
@@ -21,16 +21,18 @@ typedef struct{
     int Size;
 }List;
 ```
+:::
 
-### Khởi tạo rỗng 
+::: tip KHỞI TẠO RỖNG
 
 ```c
 void makeNullList(List *L){
     L->Size = 0;
 }
 ```
+:::
 
-### Hiển thị danh sách
+::: tip HIỂN THỊ DANH SÁCH
 
 ```c
 void displayList(List L){
@@ -39,8 +41,9 @@ void displayList(List L){
     }
 }
 ```
+:::
 
-### Thêm n phần tử vào danh sách
+::: tip THÊM <code>N</code> PHẦN TỬ TRONG <code>LIST</code>
 
 ```c
 void InputList(int n,List *L){
@@ -51,8 +54,9 @@ void InputList(int n,List *L){
     }
 }
 ```
+:::
 
-### Xoá phần tử vị trí p trong danh sách
+::: tip XOÁ PHẦN TỬ TẠI VỊ TRÍ <code>P</code> TRONG <code>LIST</code>
 
 ```c
 void deleteListbyPos(int p,List *L){
@@ -62,9 +66,9 @@ void deleteListbyPos(int p,List *L){
     L->Size--;
 }
 ```
+:::
 
-
-### Xoá phần tử x trong danh sách
+::: tip XOÁ PHẦN TỬ <code>X</code> TRONG <code>LIST</code>
 
 ```c
 void deleteListbyID(int x, List *L){
@@ -75,8 +79,9 @@ void deleteListbyID(int x, List *L){
     }
 }
 ```
+:::
 
-### Trả về vị trí đầu tiên của x trong danh sách
+::: tip TRẢ VỀ VỊ TRÍ ĐẦU TIÊN CỦA <code>X</code> TRONG <code>LIST</code>
 
 ```c
 int locateList(int x,List L){
@@ -88,8 +93,9 @@ int locateList(int x,List L){
     return -1;
 }
 ```
+:::
 
-### Kiểm tra x có trong danh sách
+::: tip KIỂM TRA <code>X</code> TRONG <code>LIST</code>
 
 ```c
 int memberList(int x,List L){
@@ -99,8 +105,9 @@ int memberList(int x,List L){
     return 0;
 }
 ```
+:::
 
-### Tối ưu danh sách (`1 2 3` -> `1 2`)
+::: tip TỐI ƯU DANH SÁCH (`1 2 3` -> `1 2`)
 
 ```c
 void optimizeList(List *L){
@@ -120,8 +127,9 @@ void optimizeList(List *L){
     }  
 }
 ```
+:::
 
-### Thêm x tại vị trí p trong danh sách
+::: tip THÊM <code>X</code> TẠI VỊ TRÍ  <code>P</code> TRONG <code>LIST</code>
 
 ```c
 void insertList(int x,int p,List *L){
@@ -140,8 +148,9 @@ void insertList(int x,int p,List *L){
     }
 }
 ```
+:::
 
-### chuyển danh sách qua danh sách mới
+::: tip CHUYỂN DANH SÁCH QUA DANH SÁCH MỚI
 
 ```c
 void changeList(List L1,List *L){
@@ -150,8 +159,9 @@ void changeList(List L1,List *L){
     }
 }
 ```
+:::
 
-### Gộp 2 danh sách vào 1 danh sách
+::: tip GỘP 2 DANH SÁCH VÀO MỘT
 
 ```c
 void mergeList(List L1,List L2,List *L){
@@ -159,8 +169,9 @@ void mergeList(List L1,List L2,List *L){
     changeList(L2,L);
 }
 ```
+:::
 
-### Lọc phần tử chẳn qua 1 danh sách
+::: tip LỌC PHẦN TỬ CHẲN QUA MỘT DANH SÁCH
 
 ```c
 void filter_evenNumber(List L1,List *L){
@@ -173,8 +184,9 @@ void filter_evenNumber(List L1,List *L){
     }
 }
 ```
+:::
 
-### Lọc phần tử lẻ qua 1 danh sách
+::: tip LỌC PHẦN TỬ LẺ QUA MỘT DANH SÁCH
 
 ```c
 void filter_oddNumber(List L1,List *L){
@@ -187,8 +199,9 @@ void filter_oddNumber(List L1,List *L){
     }
 }
 ```
+:::
 
-### Tính trung bình các phần tử trong danh sách
+::: tip TÍNH TRUNG BÌNH CÁC PHẦN TỬ TRONG DANH SÁCH
 
 ```c
 double averageList(List L){
@@ -199,7 +212,55 @@ double averageList(List L){
     return result/L.Size;
 }
 ```
+:::
+
+### [searchList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/searchList.h)
+
+::: tip TÌM KIẾM TUYẾN TÍNH 
+
+```c
+// không cần sắp xếp
+int linearSearch(int x,List L){
+    for (int i = 0; i < L.Size; i++){
+        if(L.Data[i] == x){
+            return i;
+        }
+    }
+    return 1;
+}
+```
+:::
+
+::: tip TÌM KIẾM NHỊ PHÂN
+
+```c
+// cần sắp xếp
+int binarySearch(int x,List L){
+    int left = 0;
+    int right = L.Size - 1;
+    int mid;
+    while(right >= left){
+        mid = left + ((right - left) / 2);
+        if(L.Data[mid] == x){
+            return mid;
+        }
+        else if(L.Data[mid] > x){
+            right = mid - 1;
+        }
+        else{
+            left = mid + 1;
+        }
+    }
+    return -1;
+}
+```
+:::
+
+### sortList.h
+
+
+### studentList.h
 
 
 
-
+<comment/>
