--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
@@ -1,7 +1,15 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-51-icons8-link.png" width="40"> Bài 2. Danh sách liên kết (`Linked List`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-16-51-icons8-link.png" width="40"> Bài 2. Danh sách liên kết
 
-## Mô hình 
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình 
 
-<div class="videoZen">
+::: tip 💡 MẸO
 
-</div>
+Bạn có thể tham khảo và thực hành theo mô hình `Linked List` [tại đây](https://visualgo.net/en/list)
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-30-52-icons8_concept_30px.png">[Lý thuyết](https://nguyenvanhieu.vn/danh-sach-lien-ket-don/)
+
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
+
+### 
