--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/5.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/5.md
@@ -1,6 +1,6 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-59-icons8-folder_tree.png" width="40"> Bài 5. Cây nhị phân (`Tree BST`)
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2020/12/16-23-17-59-icons8-folder_tree.png" width="40"> Bài 5. Cây nhị phân
 
-## Mô hình 
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình 
 
 <div class="videoZen">
 
