--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
@@ -10,7 +10,7 @@
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
 
-### [arrayList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/arrayList.h)
+### [arrayList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/ArrayList/arrayList.h)
 
 ::: tip KHỞI TẠO
 
@@ -214,7 +214,7 @@ double averageList(List L){
 ```
 :::
 
-### [searchList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/searchList.h)
+### [searchList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/ArrayList/searchList.h)
 
 ::: tip TÌM KIẾM TUYẾN TÍNH 
 
@@ -256,11 +256,218 @@ int binarySearch(int x,List L){
 ```
 :::
 
-### sortList.h
+### [sortList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/ArrayList/sortList.h)
 
+::: tip HOÁN ĐỔI 2 SỐ
 
-### studentList.h
+```c
+void swap(int *a,int *b){
+  int temp = *a;
+  *a = *b;
+  *b = temp;
+}
+```
+:::
 
+::: tip SẮP XẾP TRỰC TUYẾN
 
+```c
+void interchangeSort(List *L){
+  for (int i = 0; i < L->Size - 1; i++){
+    for (int j = i + 1; j < L->Size; j++){
+      if(L->Data[i] > L->Data[j]){
+        swap(&L->Data[i],&L->Data[j]);
+      }
+    }
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP CHỌN
+
+```c
+void selectionSort(List *L){
+  for(int i = 0 ; i < L->Size - 1; i++){
+    int min = i;
+    for (int j = i + 1; j < L->Size; j++){
+      if(L->Data[min] > L->Data[j]){
+        min = j;
+      }
+    }
+    if(min != i){
+      swap(&L->Data[min],&L->Data[i]);
+    }
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP NỔI BỌT
+
+```c
+void bubbleSort(List *L){
+  for (int i = 0; i < L->Size; i++){
+    for (int j = L->Size - 1; j >= 0; j--){
+      if(j > i){
+        if(L->Data[j] < L->Data[j-1]){
+          swap(&L->Data[j],&L->Data[j-1]);
+        }
+      }
+    }
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP CHÈN 
+
+```c
+void insertionSort(List *L){
+  int x;
+  int pos;
+  for (int i = 1; i < L->Size; i++){
+    pos = i - 1;
+    x = L->Data[i];
+    while (pos >= 0 && L->Data[pos] > x){
+      L->Data[pos + 1] = L->Data[pos];
+      pos--;
+    }
+    L->Data[pos+1] = x;
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP CÂY NHỊ PHÂN 
+
+```c
+void heaplify(int i,int n,List *L){
+  while (i <= (n / 2) - 1){
+    int left = (2 * i) + 1;
+    int right = (2 * i) + 2;
+    int max = left;
+    if(right < n && L->Data[right] > L->Data[max]){
+      max = right;
+    }
+    if(L->Data[i] < L->Data[max]){
+      swap(&L->Data[i],&L->Data[max]);
+    }
+    i = max;
+  }
+}
+
+void heapSort(List *L){
+  for(int i = (L->Size - 1) / 2; i >= 0 ; i--){
+      heaplify(i,L->Size,L);
+  }
+  for(int i = L->Size - 1 ; i >= 0 ; i--){
+    swap(&L->Data[0],&L->Data[i]);
+    heaplify(0,i,L);
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP SHELL
+
+```c
+void shellSort(List *L){
+  int x,pos;
+  int divide = 2; // có thể thay đổi vách chia
+  for(int h = L->Size / divide; h > 0 ; h /= divide){
+    for(int i = h ; i < L->Size ; i++){
+      x = L->Data[i];
+      pos = i - h;
+      while (pos >= 0 && L->Data[pos] > x){
+        L->Data[pos + h] = L->Data[pos];
+        pos -= h;
+      }
+        L->Data[pos+h] = x;
+    }
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP NHANH
+
+```c
+void quickSort(List *L,int start,int end){
+  int pivot = L->Data[(start + end) / 2]; // tuỳ chọn pivot
+  int left = start;
+  int right = end;
+  while(left <= right){
+    while(L->Data[left] < pivot){
+      left++;
+    }
+    while(L->Data[right] > pivot){
+      right--;
+    }
+    if(left <= right){
+      swap(&L->Data[left],&L->Data[right]);
+      left++;
+      right--;
+    }
+  }
+  if(right > start){
+    quickSort(L,start,right);
+  }
+  if(left < end){
+    quickSort(L,left,end);
+  }
+}
+```
+:::
+
+::: tip SẮP XẾP GỘP
+
+```c
+void merge(List *L,int left,int mid,int right){
+  int n1 = mid - left + 1;
+  int n2 = right - mid;
+  int M1[n1],M2[n2];
+  for (int i = 0; i < n1; i++){
+    M1[i] = L->Data[left + i];
+  }
+  for (int i = 0; i < n2; i++){
+    M2[i] = L->Data[mid + 1 + i];
+  }
+  int i = 0;// mảng R
+  int j = 0;// mảng Q
+  int k = left;
+  while (i < n1 && j < n2){
+    if (M1[i] <= M2[j]){
+      L->Data[k] = M1[i];
+      i++;
+    }
+    else{
+      L->Data[k] = M2[j];
+      j++;
+      k++;
+    }
+  }
+  while (i < n1){
+    L->Data[k] = M1[i];
+    i++;
+    k++;
+  }
+  while (j < n2){
+    L->Data[k] = M2[j];
+    j++;
+    k++;
+  }
+}
+
+void mergeSort(List *L,int start,int end){
+  if(start < end){
+    int half = start + ((end - start) / 2);
+    mergeSort(L,start,half);
+    mergeSort(L,half + 1,end);
+    merge(L,start,half,end);
+  }
+}
+```
+:::
 
 <comment/>
