--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/2.md
@@ -12,4 +12,638 @@ Bạn có thể tham khảo và thực hành theo mô hình `Linked List` [tại
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
 
-### 
+### [linkedList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/LinkedList/linkedList.h)
+
+::: tip CẤU TRÚC
+
+```c
+struct NODE{
+    int data;
+    struct NODE* Next;
+};
+typedef struct NODE Node;
+typedef struct{
+    Node *Head;
+    Node *Tail;
+    int Size;
+}List;
+```
+:::
+
+::: tip KHỞI TẠO RỖNG
+
+```c
+void makeNullList(List *L){
+    L->Head = NULL;
+    L->Tail = NULL;
+    L->Size = 0;
+}
+```
+:::
+
+::: tip HIỂN THỊ DANH SÁCH
+
+```c
+void displayList(List L){
+    Node *temp = L.Head;
+    while(temp != NULL){
+        printf("%d ",temp->data);
+        temp = temp->Next;
+    }
+    printf("\n");
+    printf("Size = %d",L.Size);
+    printf("\n");
+}
+```
+:::
+
+::: tip TẠO MỘT NODE VỚI PHẦN TỬ
+
+```c
+Node *createNode(int x){
+    Node *newnode = (Node *)malloc(sizeof(Node));
+    newnode->data = x;
+    newnode->Next = NULL;
+    return newnode;
+}
+```
+:::
+
+::: tip THÊM NODE VÀO ĐẦU HOẶC CUỐI DANH SÁCH
+
+```c
+void insertList_Frist(Node *newNode,List *L){
+    if(L->Head == NULL){
+        L->Head = newNode;
+        L->Tail = newNode;
+    }
+    else{
+        newNode->Next = L->Head;
+        L->Head = newNode;
+    }
+    L->Size++;
+}
+
+void insertList_End(Node *newNode,List *L){
+    if(L->Head == NULL){
+        L->Head = newNode;
+        L->Tail = newNode;
+    }
+    else{
+        L->Tail->Next = newNode;
+        L->Tail=newNode;
+        newNode->Next = NULL;
+    }
+    L->Size++;
+}
+```
+:::
+
+::: tip THÊM NODE VÀO VỊ TRÍ P TRONG DANH SÁCH
+
+```c
+void insertList_byPos(int p,Node *newNode,List *L){
+    if(p < 1 || L->Head == NULL){
+        insertList_Frist(newNode,L);
+    }
+    else if(p >= L->Size){
+        insertList_End(newNode,L);
+    }
+    else{
+        Node *temp = L->Head;
+        int i = 0;
+        while(temp != NULL){
+            if(p - 1 == i){
+                newNode->Next = temp->Next;
+                temp->Next = newNode;
+                L->Size++;
+                return;
+            }
+            i++;
+            temp = temp->Next;
+        }
+    }
+}
+```
+:::
+
+::: tip THÊM N NODE VÀO DANH SÁCH
+
+```c
+void inputList(int n,List *L){
+    int x;
+    Node *temp;
+    for (int i = 0; i < n; i++){
+        scanf("%d",&x);
+        temp = createNode(x);
+        insertList_byPos(i,temp,L);
+    }
+}
+```
+:::
+
+::: tip KIỂM TRA X TRONG DANH SÁCH
+
+```c
+int memberList(int x,List L){
+    Node *temp = L.Head;
+    while (temp != NULL){
+        if(temp->data == x){
+            return 1;
+        }
+        temp = temp->Next;
+    }
+    return 0;
+}
+```
+:::
+
+::: tip TÌM VỊ TRÍ NODE CHỨA X
+
+```c
+int locateList(int x,List L){
+    Node *temp = L.Head;
+    int i = 0;
+    while (temp != NULL){
+        if(temp->data = x){
+            free(temp);
+            return i;
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+    free(temp);
+    return -1;
+}
+```
+:::
+
+::: tip XOÁ NODE CÓ VỊ TRÍ P TRONG DANH SÁCH
+
+```c
+void deleteList_byPos(int p,List *L){
+    Node *temp = L->Head;
+    Node *prev = NULL;
+    int i = 0;
+    while (temp != NULL) {
+        if(p == i){
+            if (prev==NULL) {
+                L->Head=temp->Next;
+            }
+            else{
+                prev->Next=temp->Next;
+            }
+            L->Size--;
+            return;
+        }
+        else{
+            i++;
+        }
+        prev = temp;
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip XOÁ NODE TRONG DANH SÁCH
+
+```c
+void deleteList_byNode(Node* newNode,List *L){
+    int i = 0;
+    Node *temp = L->Head;
+    while (temp != NULL){
+        if(newNode == temp){
+            deleteList_byPos(i,L);
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip XOÁ NODE CÓ PHẦN TỬ X TRONG DANH SÁCH
+
+```c
+void deleteList_byValue(int x,List *L){
+    Node *temp = L->Head;
+    int i = 0;
+    while (temp != NULL){
+        if(temp->data == x){
+            deleteList_byPos(i,L);
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip TỐI ƯU DANH SÁCH (`1 2 1` -> `1 2`)
+
+```c
+void optimizeList(List *L){
+    Node *temp1 = L->Head;
+    Node *temp2 = NULL;
+    while (temp1->Next != NULL){
+        temp2 = temp1->Next;
+        while (temp2 != NULL){
+            if(temp1->data == temp2->data){
+                deleteList_byNode(temp2,L);
+            }
+            temp2 = temp2->Next;
+        }
+        temp1 = temp1->Next;
+    }
+}
+```
+:::
+
+::: tip TÌM NODE CÓ PHẦN TỬ LỚN NHẤT HOẶC NHỎ NHẤT
+
+```c
+int Find_Max(List L){
+    Node *temp=L.Head;
+    int max=temp->data;
+    while (temp!=NULL) {
+        if(max<temp->data){
+            max=temp->data;
+        }
+        temp=temp->Next;
+    }
+    free(temp);
+    return max;
+}
+
+int Find_Min(List L){
+    Node *temp=L.Head;
+    int min=temp->data;
+    while (temp!=NULL) {
+        if(min>temp->data){
+            min=temp->data;
+        }
+        temp=temp->Next;
+    }
+    free(temp);
+    return min;
+}
+```
+:::
+
+::: tip CHUYỂN SANG DANH SÁCH KHÁC 
+
+```c
+void changeList(List L1,List *L){
+    Node *temp = L1.Head;
+    int i = L->Size;
+    while (temp != NULL){
+        insertList_byPos(i,createNode(temp->data),L);
+        i++;
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip GỘP 2 DANH SÁCH THÀNH 1 DANH SÁCH 
+
+```c
+void mergeList(List L1,List L2,List *L){
+    changeList(L1,L);
+    changeList(L2,L);
+}
+```
+:::
+
+::: tip LỌC SỐ CHẴN HOẶC LẺ QUA DANH SÁCH KHÁC
+
+```c
+void filter_evenNumber(List L1, List *L){
+    Node *temp = L1.Head;
+    int i = L->Size;
+    while (temp != NULL){
+        if(temp->data % 2 == 0){
+            insertList_byPos(i,createNode(temp->data),L);
+        }
+        i++;
+        temp = temp->Next;
+    }
+}
+
+void filter_oddNumber(List L1, List *L){
+    Node *temp = L1.Head;
+    int i = L->Size;
+    while (temp != NULL){
+        if(temp->data % 2 != 0){
+            insertList_byPos(i,createNode(temp->data),L);
+        }
+        i++;
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip TÍNH TỔNG TRUNG BÌNH PHẦN TỬ TRONG DANH SÁCH
+
+```c
+double averageList(List L){
+    Node *temp = L.Head;
+    double result = 0;
+    while (temp != NULL){
+        result += temp->data;
+        temp = temp->Next;
+    }
+    return result/L.Size;
+}
+```
+:::
+
+### [sentenceList.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/LinkedList/sentenceList.h)
+
+::: tip CẤU TRÚC
+
+```c
+struct NODE{
+    char Word;
+    struct NODE *Next;
+};
+typedef struct NODE Node;
+typedef struct{
+    Node *Head;
+    Node *Tail;
+    int Size;
+}Sentence;
+```
+:::
+
+::: tip TẠO RỖNG CÂU
+
+```c
+void makeNullSentence(Sentence *S){
+    S->Head = NULL;
+    S->Tail = NULL;
+    S->Size = 0;
+}
+```
+:::
+
+::: tip HIỂN THỊ CÂU
+
+```c
+void displaySentence(Sentence S){
+    Node *temp = S.Head;
+    while(temp != NULL){
+        printf("%c",temp->Word);
+        temp = temp->Next;
+    }
+    printf("Size = %d",S.Size);
+    printf("\n");
+}
+```
+:::
+
+::: tip TẠO MỘT NODE X LÀ TỪ
+
+```c
+Node *createNode(char c){
+    Node *newNode = (Node *)malloc(sizeof(Node));
+    newNode->Word = c;
+    newNode->Next = NULL;
+    return newNode;
+}
+```
+:::
+
+::: tip CHÈN MỘT TỪ VÀO ĐẦU HOẶC CUỐI CÂU
+
+```c
+void insertSentence_Frist(Node *newNode,Sentence *S){
+    if(S->Head == NULL){
+        S->Head = newNode;
+        S->Tail = newNode;
+    }
+    else{
+        newNode->Next = S->Head;
+        S->Head = newNode;
+    }
+    S->Size++;
+}
+void insertSentence_End(Node *newNode,Sentence *S){
+    if(S->Head == NULL){
+        S->Head = newNode;
+        S->Tail = newNode;
+    }
+    else{
+        S->Tail->Next = newNode;
+        S->Tail=newNode;
+        newNode->Next = NULL;
+    }
+    S->Size++;
+}
+```
+:::
+
+::: tip CHÈN TỪ VỊ TRÍ P TRONG CÂU 
+
+```c
+void insertSentence_byPos(int p,Node *newNode,Sentence *S){
+    if(p < 1 || S->Head == NULL){
+        insertSentence_Frist(newNode,S);
+    }
+    else if(p >= S->Size){
+        insertSentence_End(newNode,S);
+    }
+    else{
+        Node *temp = S->Head;
+        int i = 0;
+        while(temp != NULL){
+            if(p - 1 == i){
+                newNode->Next = temp->Next;
+                temp->Next = newNode;
+                S->Size++;
+                return;
+            }
+            i++;
+            temp = temp->Next;
+        }
+    }
+}
+```
+:::
+
+::: tip NHẬP CÂU
+
+```c
+void inputSentence(Sentence *S){
+    char c[100];
+    fgets(c,100,stdin);
+    int len = strlen(c);
+    Node *temp;
+    for(int i = 0 ; i < strlen(c) ; i++){
+        temp = createNode(c[i]);
+        insertSentence_byPos(i,temp,S);
+    }
+}
+```
+:::
+
+::: tip KIỂM TRA TỪ X CÓ TRONG CÂU
+
+```c
+int memberSentence(char x,Sentence S){
+    Node *temp = S.Head;
+    while (temp != NULL){
+        if(temp->Word == x){
+            return 1;
+        }
+        temp = temp->Next;
+    }
+    return 0;
+}
+```
+:::
+
+::: tip TÌM VỊ TRÍ TỪ X TRONG CÂU
+
+```c
+int locateSentence(char x,Sentence S){
+    Node *temp = S.Head;
+    int i = 0;
+    while (temp != NULL){
+        if(temp->Word == x){
+            return i;
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+    return -1;
+}
+```
+:::
+
+::: tip XOÁ TỪ VỊ TRÍ P TRONG CÂU
+
+```c
+void deleteSentence_byPos(int p,Sentence *S){
+    Node *temp = S->Head;
+    Node *prev = NULL;
+    int i = 0;
+    while (temp != NULL) {
+        if(p == i){
+            if (prev==NULL) {
+                S->Head=temp->Next;
+            }
+            else{
+                prev->Next=temp->Next;
+            }
+            S->Size--;
+            return;
+        }
+        else{
+            i++;
+        }
+        prev = temp;
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip XOÁ TỪ X TRONG CÂU
+
+```c
+void deleteSentence_byValue(char x,Sentence *S){
+    Node *temp = S->Head;
+    int i = 0;
+    while (temp != NULL){
+        if(temp->Word == x){
+            deleteSentence_byPos(i,S);
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip  XOÁ MỘT NODE  TRONG CÂU
+
+```c
+void deleteSentence_byNode(Node *newNode,Sentence *S){
+    int i = 0;
+    Node *temp = S->Head;
+    while (temp != NULL){
+        if(newNode == temp){
+            deleteSentence_byPos(i,S);
+        }
+        else{
+            i++;
+        }
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip XOÁ KHOẢNG TRẮNG DƯ THỪA
+
+```c
+void deleteWhiteSpace(Sentence *S){
+    Node *temp = S->Head;
+    while(isspace(temp->Word)){
+        deleteSentence_byNode(temp,S);
+        temp = temp->Next;
+    }
+    while(temp != NULL){
+        if(isspace(temp->Word) && temp->Next != NULL){
+            if(isspace(temp->Next->Word)){
+                deleteSentence_byNode(temp,S);
+            }
+        }
+        temp = temp->Next;
+    }
+}
+```
+:::
+
+::: tip CHUẨN HOÁ CÂU
+
+```c
+void normalizeSentence(Sentence *S){
+    deleteWhiteSpace(S);
+    Node *temp = S->Head;
+    if(islower(temp->Word)){
+        temp->Word -= 32;
+    }
+    temp = temp->Next;
+    while (temp != NULL){
+        while(!isspace(temp->Word)){
+            if(isupper(temp->Word)){
+                temp->Word += 32;
+            }
+            temp = temp->Next;
+        }
+        if(isspace(temp->Word) && temp->Next != NULL){
+            temp = temp->Next;
+            if(islower(temp->Word)){
+                temp->Word -= 32;
+            }
+        }
+        temp = temp->Next;
+    }
+}
+
+```
+:::
