--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/1.md
@@ -171,7 +171,7 @@ void mergeList(List L1,List L2,List *L){
 ```
 :::
 
-::: tip LỌC PHẦN TỬ CHẲN QUA MỘT DANH SÁCH
+::: tip LỌC PHẦN TỬ CHẲN HOẶC LẺ QUA MỘT DANH SÁCH
 
 ```c
 void filter_evenNumber(List L1,List *L){
@@ -183,12 +183,7 @@ void filter_evenNumber(List L1,List *L){
         }
     }
 }
-```
-:::
 
-::: tip LỌC PHẦN TỬ LẺ QUA MỘT DANH SÁCH
-
-```c
 void filter_oddNumber(List L1,List *L){
     int k = 0;
     for (int i = 0; i < L1.Size; i++){
