--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/4.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/4.md
@@ -2,6 +2,118 @@
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình 
 
-<div class="videoZen">
 
-</div>
+::: tip GỒM 2 LOẠI
+
+- [Queue-ArrayList](https://www.cs.usfca.edu/~galles/visualization/QueueArray.html) - *Ngăn xếp cài đặt theo danh sách đặc*
+
+- [Queue-LinkedList](https://www.cs.usfca.edu/~galles/visualization/QueueLL.html) - *Ngăn xếp cài đạt theo danh sách liên kết*
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-30-52-icons8_concept_30px.png">[Lý thuyết](https://nguyenvanhieu.vn/hang-doi-queue/)
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
+
+### [queue.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT177-Cau_truc_du_lieu/Source/Queue/queue.h)
+
+::: tip CẤU TRÚC
+
+```c
+#define Max_length 50
+typedef struct{
+    int Data[Max_length];
+    int Front;
+    int Rear;
+}Queue;
+```
+:::
+
+::: tip KHỞI TẠO RỘNG HÀNG ĐỢI
+
+```c
+void makeNullQueue(Queue *Q){
+    Q->Front = 0;
+    Q->Rear = 0;
+}
+```
+:::
+
+::: tip HIỂN THỊ HÀNG ĐỢI
+
+```c
+void displayQueue(Queue Q){
+    for(int i = Q.Front ; i < Q.Rear ; i++){
+        printf("%d ",Q.Data[i]);
+    }
+}
+```
+:::
+
+::: tip NHẬP N PHẦN TỬ VÀO HÀNG ĐỢI
+
+```c
+void inputQueue(int n,Queue *Q){
+    for (int i = 0; i < n; i++){
+        scanf("%d",&Q->Data[i]);
+    }
+    Q->Front = 0;
+    Q->Rear = n;
+}
+```
+:::
+
+::: tip CHÈN PHẦN TỬ X VÀO VỊ TRÍ P TRONG HÀNG ĐỢI
+
+```c
+void insertQueue(int x,int p,Queue *Q){
+    if(p < 0 || p > Q->Rear){
+        printf("Postion Invalid !!!");
+    }
+    else if(Q->Rear == Max_length){
+        printf("Full Queue!!!");
+    }
+    else{
+        Q->Data[p] = x;
+        Q->Rear++;
+    }
+}
+```
+:::
+
+::: tip TRẢ V VỊ TRÍ CỦA PHẦN TỬ X
+
+```c
+int locateQueue(int x,Queue *Q){
+    for(int i = Q->Front ; i < Q->Rear ; i++){
+        if(Q->Data[i] == x){
+            return i;
+        }
+    }
+    return -1;
+}
+```
+:::
+
+::: tip XOÁ PHẦN TỬ TẠI VỊ TRÍ P TRONG HÀNG ĐỢI
+
+```c
+void deleteQueue_byPos(int p,Queue *Q){
+    for(int i = p ; i < Q->Rear ; i++){
+        Q->Data[i] = Q->Data[i+1];
+    }
+    Q->Rear--;
+}
+```
+:::
+
+::: tip XOÁ PHẦN TỬ X TRONG PHẦN TỬ
+
+```c
+void deleteQueue_byValue(int x,Queue *Q){
+    int p = locateQueue(x,Q);
+    deleteQueue_byPos(p,Q);
+}
+```
+:::
+
+<comment/>
