--- a/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/7.md
+++ b/docs/cosonganh/CT177-Cau_truc_du_lieu/Thuchanh/7.md
@@ -2,6 +2,18 @@
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-31-59-icons8_handle_with_care_35px.png"> Mô hình  
 
-<div class="videoZen">
-  
-</div>
+::: tip 2 LOẠI MÔ HÌNH
+
+- [Open Hash](https://www.cs.usfca.edu/~galles/visualization/OpenHash.html)
+
+- [Close Hash](https://www.cs.usfca.edu/~galles/visualization/ClosedHash.html)
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-30-52-icons8_concept_30px.png">[Lý thuyết](https://nguyenvanhieu.vn/bang-bam-hash-tables/)
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/08-10-24-29-icons8_google_code_30px.png"> Source Code
+
+Hiện tại chưa có, nếu bạn cần thì hãy comment sau đây để mình ưu tiên làm
+
+<comment/>
+
