--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
@@ -1,6 +1,8 @@
 # Đồ thị vô hướng
 
 
+### graph.h
+
 ::: tip CẤU TRÚC
 
 ```c
@@ -11,19 +13,22 @@ typedef struct{
     int n; //số đỉnh
     int m; //số cung
 }Graph;
+```
+:::
 
-void makeNullList(Graph *G);                //* khởi tạo rỗng Graph
-void init_Graph(Graph *G, int n);           //* tạo Graph với n đỉnh
-void printGraph(Graph G);                   //* in ma trận Graph
-int degree(Graph G, int x);                 //* tính bậc của đỉnh x
-void DFS(Graph G, int x);                   //* duyệt theo chiều sâu Graph
+::: tip KHỞI TẠO GRAPH RỖNG 
 
-
-
+```C
 void makeNullList(Graph *G){
     G->m = 0;
     G->n = 0;
 }
+```
+:::
+
+::: tip TẠO GRAPH CÓ N ĐỈNH
+
+```C
 void init_Graph(Graph *G, int n){
     for (int i = 1; i <= n; i++){
         for (int j = 1; j <= n; j++){
@@ -31,6 +36,11 @@ void init_Graph(Graph *G, int n){
         }
     }
 }
+```
+
+::: tip IN MA TRẬN GRAPH
+
+```c
 void printGraph(Graph G){
     for (int i = 1; i <= G.n; i++){
         for (int j = 1; j <= G.n; j++){
@@ -39,19 +49,72 @@ void printGraph(Graph G){
         printf("\n");
     }
 }
+:::
+
+::: tip TÍNH BẬC CỦA ĐỈNH
+
+```c
 int degree(Graph G, int x){
     int count = 0;
     for (int i = 1; i <= G.n; i++){
-        for (int j = 1; j <= G.n; j++){
-            if(G.A[i][j] == 1){
-                count++;
-            }
+        if(G.A[x][i] == 1){
+            count++;
         }
     }
     return count;
 }
-void DFS(Graph G, int x){
-    
-}
-```
 :::
+
+::: tip DUYỆT THEO CHIỀU SÂU BẮT ĐẦU TỪ ĐỈNH N
+
+```c
+List DFS(Graph G, int x){
+    Stack S;
+    makeNullStack(&S);
+    pushStack(&S,x);
+
+    List L;
+    makeNullList(&L);
+    
+    while (!emptyStack(S)){
+        int u = pullStack(&S);
+        if(memberList(u,L)) continue;
+        insertList(u,&L);
+        List temp = neighbors(G,u);
+        for (int i = 0; i < temp.Size; i++){
+            int v = temp.Data[i];
+            if(!memberList(v,L) && !memberStack(v,S)){
+                pushStack(&S,v);
+            }
+        }
+    }
+    return L;
+}
+
+::: tip DUYỆT THEO CHIỀU RỘNG BẮT ĐẦU TỪ ĐỈNH N
+
+List BFS(Graph G, int x){
+    List queue;
+    makeNullList(&queue);
+    insertList(x,&queue);
+    
+    List L;
+    makeNullList(&L);
+
+    while (!emptyList(queue)){
+        int u = elementAt(&queue);
+        if(memberList(u,L)) continue;
+        insertList(u,&L);
+        List temp = neighbors(G,u);
+        for (int i = 0; i < temp.Size; i++){
+            int v = temp.Data[i];
+            if(!memberList(v,L) && !memberList(v,queue)){
+                insertList(v,&queue);
+            }
+        }
+    }
+    return L;
+}
+:::
+
+<comment/>
