--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -231,17 +231,6 @@ Cho mô hình như sau :
 
 Xây dựng một mạng `LAN` đơn giản theo các bài tập dưới đây:  
 
-::: tip 💡 THIẾT LẬP MẠNG TRONG VITURALBOX
-
-- **Bước 1:** Vào `Network` trong `VirualBox` tạo mới mạng `NAT` như sau : 
-  
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-14-23-16-Screen%20Shot%202021-09-20%20at%2014.22.49.png" width="500">
-
-- **Bước 2:** Vào `Setting` trong máy ảo `Ubuntu`, vào `Network` và đổi thảnh `Natnetwork` như sau:
-
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-14-23-18-Screen%20Shot%202021-09-19%20at%2015.10.52.png" width="500">
-:::
-
 ### 1. Tạo thư mục và thao tác `BaiTap1`
 
 Sử dụng lần lượt các lệnh sau để tạo thư mục cho bài tập
@@ -388,9 +377,9 @@ $ kathara vclean -n <name>
 
 ## III.Bài tập 2
 
-Sử dụng lại mô hình cuả [Bài tập 1](/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md#_2-bai-tap-1)
+Sử dụng lại mô hình cuả [Bài tập 1](/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md#ii-bai-tap-1)
 
-### 1.Tạo thư mục và thao tác BaiTap2
+### 1.Tạo thư mục và thao tác `BaiTap2`
 
 Sử dụng lệnh `mkdir` để tạo thư mục và `cd` để di chuyển vào thư mục đó.
 
@@ -485,7 +474,7 @@ Cho mô hình như sau :
 
 Xây dựng 2 nhánh mạng thuộc cùng một mạng `LAN` được kết nối bởi 1 `router`. Các bước thực hiện như sau : 
 
-### 1.Tạo thư mục và thao tác BaiTap3
+### 1.Tạo thư mục và thao tác `BaiTap3`
 
 Tiến hành tạo các thư mục và file như sau: 
 
@@ -568,3 +557,98 @@ $ kathara wipe
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-14-20-50-Screen%20Shot%202021-09-20%20at%2014.20.43.png" width="600">
 
 ## V. Bài tập 4
+
+::: tip MÔ HÌNH
+
+Cho mô hình như sau : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-14-42-35-Screen_Shot_2021-09-20_at_14.42.18-removebg-preview.png" style="background-color: white">
+:::
+
+### 1. Tạo thư mục và thao tác `BaiTap4`
+
+Tạo các thư mục và file như sau : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-18-36-20-Screen%20Shot%202021-09-20%20at%2015.30.41.png">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-18-35-34-Screen%20Shot%202021-09-20%20at%2015.30.29.png" width="600">
+
+### 2. Cấu hình file mạng máy ảo
+
+- Trên file `lab.conf` cấu hình như sau :
+
+  ```txt
+  pc1[0]=A
+  pc2[0]=B
+  pc3[0]=A
+  pc4[0]=B
+  router[0]=A
+  router[1]=B
+  ```
+
+- Trên file `pc1.startup`, `pc2.startup`, `pc3.startup` và `pc4.startup` cấu hình lần lượt như sau:
+
+  ```txt
+  ifconfig eth0 10.0.0.101/24 up
+  route add default gw 10.0.0.1
+  ```
+
+  ```txt
+  ifconfig eth0 10.0.1.101/24 up
+  route add default gw 10.0.1.1
+  ```
+
+  ```txt
+  ifconfig eth0 10.0.0.102/24 up
+  route add default gw 10.0.0.1
+  ```
+
+  ```txt
+  ifconfig eth0 10.0.1.102/24 up
+  route add default gw 10.0.1.1
+  ```
+
+- Trên file `router.startup` cấu hình như sau:
+
+  ```txt
+  ifconfig eth0 10.0.0.1/24 up
+  ifconfig eth1 10.0.1.1/24 up
+  ```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-35-22-z2778485295176_7089018899db845109975966132f739d.jpg">
+
+### 3. Chạy các thiết bị máy ảo
+
+Sử dụng lệnh `kathara` sau đây để khởi tạo mô hình trên: 
+
+```sh
+$ kathara lvstart pc1 pc2 pc3 pc4 router
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-18-40-33-Screen%20Shot%202021-09-20%20at%2017.56.17.png">
+
+### 4. Lệnh `ping`, `traceroute`, `route`
+
+Từ `pc1` sử dụng các lệnh `ping` và `traceroute` để kiểm tra đường truyền tới `pc2`, `pc3`, `pc4`, `router`
+
+- Lệnh `ping`:
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-39-51-z2778485315518_a22bfd17ee7b28c260047863d4d67374.jpg">
+
+- Lệnh `traceroute`:
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-43-26-z2778485299686_dcafa1c27dcff13d7fdaaef9c9a70c33.jpg">
+
+- Lệnh `route`:
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-44-20-z2778485299675_98dc92cd11f01125ee07fe2e53a993d1.jpg">
+
+### 5. Huỷ hệ thống máy ảo
+
+Sử dụng lệnh sau để huỷ máy ảo : 
+
+```sh
+$ kathara wipe
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-45-19-Screen%20Shot%202021-09-20%20at%2019.45.14.png" width="600">
